fix table spacing

--- a/styles/design-settings/cardboard/parts/_table-settings.scss
+++ b/styles/design-settings/cardboard/parts/_table-settings.scss
@@ -148,8 +148,8 @@
             background-color: (_ref: "colorMap:::tableHeaderBgColor"),
             border-left-color: (_ref: "colorMap:::tableCellBorderColor"),
             border-right-color: (_ref: "colorMap:::tableCellBorderColor"),
-            padding-top: table-v-spacing(2),
-            padding-bottom: table-v-spacing(2),
+            padding-top: table-v-spacing(1),
+            padding-bottom: table-v-spacing(1),
         ),
         FirstTableHeadCell: (
             border-right-color: (_ref: "colorMap:::tableCellBorderColor"),
